[feat][media] jump to MediaActivity to paly when we have playlist